--- a/engineer/themes/base_templates/theme/tags_list.html
+++ b/engineer/themes/base_templates/theme/tags_list.html
@@ -1,3 +1,3 @@
-{% extends 'dark_rainbow/templates/theme/post_archives.html' %}
+{% extends 'theme/post_archives.html' %}
 
 {% block page_title %}Posts tagged '{{ tag }}'{% endblock %}
