--- a/engineer/_templates/core/_base.html
+++ b/engineer/_templates/core/_base.html
@@ -18,7 +18,7 @@
             <meta property="og:type" content="article" />
             <meta property="og:url" content="{{ post.absolute_url }}" />
             <meta property="og:title" content="{{ post.title }}" />
-            <meta property="og:description" content="{{ post.description }}" />
+            {# <meta property="og:description" content="{{ post.description }}" />#}
         {% endif %}
     {% endblock %}
 
